--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,3 +1,4 @@
 REACT_APP_SUPABASE_URL=your_supabase_project_url
 REACT_APP_SUPABASE_ANON_KEY=your_supabase_anon_key
-REACT_APP_API_BASE_URL=http://localhost:3001/api 
+REACT_APP_API_BASE_URL=http://localhost:3001/api
+REACT_APP_BACKEND_URL=http://localhost:5000 
